--- a/src/app/components/film-component/film-component.component.html
+++ b/src/app/components/film-component/film-component.component.html
@@ -3,3 +3,12 @@
     <ion-searchbar></ion-searchbar>
   </ion-toolbar>
 </div>
+
+<ion-list>
+  <ion-item>
+    <ion-select label="Filtrare i risultati" placeholder="Anno">
+      <ion-select-option value="Anno">Anno</ion-select-option>
+      <ion-select-option value="ordine alfabetico">Ordine alfabetico</ion-select-option>
+      <ion-select-option value="classificazione">Classificazione</ion-select-option>
+    </ion-select>
+  </ion-item>
