--- a/src/app/components/movie-details-modal-component/movie-details-modal-component.component.html
+++ b/src/app/components/movie-details-modal-component/movie-details-modal-component.component.html
@@ -2,15 +2,22 @@
   <ion-toolbar>
     <ion-title>{{ movie?.Title }}</ion-title> <!-- Exibe o título do filme no header do modal -->
     <ion-buttons slot="end">
-      <ion-button (click)="closeModal()">Close</ion-button>
+      <ion-button (click)="closeModal()">Chiudi</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <img [src]="movie?.Poster" alt="Movie Poster"> <!-- Exibe o pôster do filme -->
-  <p>Year: {{ movie?.Year }}</p> <!-- Exibe o ano do filme -->
-  <p>Rated: {{ movie?.Rated }}</p> <!-- Exibe a classificação do filme -->
-  <p>Genre: {{ movie?.Genre }}</p> <!-- Exibe o gênero do filme -->
-  <p>Plot: {{ movie?.Plot }}</p> <!-- Exibe a sinopse do filme -->
+<ion-content class="ion-padding conteudo">
+  <img [src]="movie?.Poster" alt="Movie Poster" class="poster"> <!-- Exibe o pôster do filme -->
+  <div class="anno">
+  <p><ion-icon name="star"></ion-icon> {{ movie?.imdbRating }}</p> <!-- Exibe a classificação do filme -->
+  <p>{{ movie?.Year }}</p> <!-- Exibe o ano do filme -->
+  </div>
+  <p class="p1">Genere</p>
+  <p>{{ movie?.Genre }}</p> <!-- Exibe o gênero do filme -->
+  <p>{{ movie?.Plot }}</p> <!-- Exibe a sinopse do filme -->
+  <p class="p1">Direttore</p>
+  <p>{{ movie?.Director }}</p>
+  <p class="p1">Attori</p>
+  <p>{{ movie?.Actors }}</p>
 </ion-content>
